# HourGlass

./: .gitignore  GOOGLE_TTS_SETUP.md  README.md  __main__.py  aps.py  config_validator.py  del_dup.py  download.py  graph.py  health_monitor.py  hourglass-status.service  hourglass.sh  image_dup.py  initial_setup.py  main.py  memory_optimizer.py  ngvla.py  pyproject.toml  requirements.bak.txt  requirements.txt  setup.sh  status_api.py  sun.py  timelapse_config.py  timelapse_core.py  timelapse_loop.py  timelapse_setup.py  timelapse_upload.py  timelapse_validator.py  v.sh  vla.ps1  vla.py  vla.sh  vla2.py  vla_config.py  vla_core.py  vla_downloader.py  vla_loop.py  vla_validator.py  youtube.py  (+1 more)
.github/workflows/: deploy.yml
lib/: audio.py  config_validator.py  health_monitor.py  image_downloader.py  image_dup.py  memory_optimizer.py  notifications.py  pixabay_download_test.py  status.py  sun_schedule.py  timelapse_config.py  timelapse_core.py  timelapse_loop.py  timelapse_setup.py  timelapse_upload.py  timelapse_validator.py  troubleshoot_audio.py  utils.py  video.py  youtube.py  youtube_refresh_token.py
pixabay_debug/: page149_attempt1_200.html  page1_attempt1_200.html  page1_attempt1_403.html  page1_attempt2_403.html  page751_attempt1_200.html  page849_attempt1_200.html
tests/: conftest.py  test_config_validator.py  test_image_dup.py  test_main.py  test_sun_schedule.py  test_timelapse_validator.py  test_utils.py
